--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,14 @@
     "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
     "importHelpers": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "alwaysStrict": true,
     "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
